@@ -303,12 +303,32 @@ void DDDWWWPageCB(Widget, XtPointer, XtPointer)
 // License
 //-----------------------------------------------------------------------------
 
-#define HUFFTEXT "COPYING.huff.C"
-#include "huffdecode.C"
-
 void ddd_license(ostream& os)
 {
-    huffdecode(os);
+    static const char COPYING[] =
+#include "COPYING.gz.C"
+	;
+
+    string tempfile = tmpnam(0);
+    FILE *fp = fopen(tempfile, "w");
+    for (int i = 0; i < int(sizeof(COPYING)) - 1; i++)
+	putc(COPYING[i], fp);
+    fclose(fp);
+
+    FILE *uncompress = 
+	popen(string(app_data.uncompress_command) + " < " + tempfile, "r");
+    if (uncompress == 0)
+    {
+	perror(app_data.uncompress_command);
+	return;
+    }
+
+    int c;
+    while ((c = getc(fp)) != EOF)
+	os << (char)c;
+    pclose(fp);
+
+    unlink(tempfile);
 }
 
 void show_license()
@@ -341,7 +361,7 @@ void show_license()
 	ddd_license(license);
 	string s(license);
 
-	fputs((char *)s, pager);
+	fputs(s.chars(), pager);
 	pclose(pager);
     }
 }
